Fix found by sonar issues